@@ -1,0 +1,6 @@
+1318341891  0.00     1.256     2     2 0.000387 0.000387 0.000387 0.000026 0.000265 1.592124
+1318341893  0.00     6.750    27    27 0.006635 0.006635 0.006635 0.000328 0.001454 4.000000
+1318341897  0.00     0.333     1     1 0.002560 0.002560 0.002560 0.000000 0.002560 3.000000
+1318341900  0.00     0.167     1     1 0.003537 0.003537 0.003537 0.000000 0.003537 6.000000
+1318341906  0.00     0.125     1     1 0.005424 0.005424 0.005424 0.000000 0.005424 8.000000
+1318341914  0.00     1.028     1     1 0.003180 0.003180 0.003180 0.000000 0.003180 0.972640
