@@ -1,5 +1,7 @@
 Changelog for mk-tcp-model:
 
+   * --type=requests caused tool to crash (issue 1341).
+
 2011-06-08: version 1.0.1
 
    * Added --start-end option.
